[package]
name = "walk_bg"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/BjarneSeger/walk_bg"

[dependencies]
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
memmap2 = "0.9.9"
tempfile = "3.24.0"
dirs = "6.0.0"
facet = "0.42.0"
facet-toml = "0.42.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
